syntax = "proto3";

option go_package = "route256/checkout/checkout";


service Checkout{
    rpc AddToCart(AddToCartRequest) returns (AddToCartResponse);
    rpc DeleteFromCart(DeleteFromCartRequest) returns (DeleteFromCartResponse);
    rpc ListCart(ListCartRequest) returns (ListCartResponse);
    rpc Purchase(PurchaseRequest) returns (PurchaseResponse);
}

message AddToCartRequest{
    uint64 user = 1;
    uint32 sku = 2;
    uint32 count = 3;
}

message AddToCartResponse{}

message DeleteFromCartRequest{
    uint64 user = 1;
    uint32 sku = 2;
    uint32 count = 3;
}
message DeleteFromCartResponse{}

message ListCartRequest{
    uint64 user = 1;
}

message ListCartResponse{
    repeated Items items = 1;
    uint32 totalPrice = 2;
}

message Items{
    uint32 sku = 1;
    uint32 count = 2;
    string name = 3;
    uint32 price = 4;
}

message PurchaseRequest{
    uint64 user = 1;
}

message PurchaseResponse{
    int64 orderID = 1;
}